--- a/bao.html
+++ b/bao.html
@@ -5,48 +5,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="index.ico" type="image/x-icon">
-    <title>百宝库 - 万物皆可搜搜搜</title>
+    <title>字造 - 始终如一的创造</title>
     <style>
         /* 全局样式 */
         body {
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
+            font-family: Arial, sans-serif;
         }
 
-        /* 导航栏样式 */
+        /* 公共样式 */
+       .hover-scale {
+            transition: transform 0.3s ease;
+        }
+
+       .hover-scale:hover {
+            transform: scale(1.1);
+        }
+
+       .hover-color {
+            transition: color 0.3s ease;
+        }
+
+       .hover-color:hover {
+            color: #000;
+        }
+
+        /* 导航栏整体样式 */
         header {
-            background-color: rgba(0, 0, 0, 0.8);
+            background-color: #f5f5f7;
             backdrop-filter: blur(20px);
             display: flex;
             justify-content: space-between;
             align-items: center;
-            height: 44px;
+            height: 66px;
+            padding: 0 10%;
             position: relative;
             z-index: 3;
             transition: background-color 0.3s ease;
-            padding: 0 200px;
         }
 
         header:hover {
-            background-color: rgba(0, 0, 0, 0.9);
+            background-color: #e8e8ea;
         }
 
-        .logo {
+        /* 导航栏 logo 样式 */
+       .logo {
             margin-right: 20px;
-            transition: transform 0.3s ease;
         }
 
-        .logo a img {
+       .logo a img {
             display: block;
+            max-width: 100%;
+            height: auto;
         }
 
-        .logo:hover {
-            transform: scale(1.1);
-        }
-
+        /* 导航菜单样式 */
         nav ul {
             list-style-type: none;
             margin: 0;
@@ -55,25 +69,20 @@
         }
 
         nav > ul > li {
-            margin: 0 20px;
+            margin: 0 15px;
             position: relative;
         }
 
         nav > ul > li > a {
-            color: #d6d6d6;
+            color: #333;
             text-decoration: none;
-            font-size: 12px;
-            position: relative;
-            display: block;
+            font-size: 15px;
             padding: 10px 0;
+            display: block;
+            position: relative;
             transition: color 0.3s ease;
         }
 
-        nav > ul > li > a:hover {
-            color: #fff;
-        }
-
-        /* 导航栏一级链接下划线动画 */
         nav > ul > li > a::after {
             content: "";
             position: absolute;
@@ -81,7 +90,7 @@
             height: 2px;
             bottom: 0;
             left: 0;
-            background-color: #fff;
+            background-color: #000;
             transform: scaleX(0);
             transform-origin: bottom right;
             transition: transform 0.3s ease;
@@ -97,7 +106,7 @@
             display: none;
             position: absolute;
             top: 100%;
-            left: -20px;
+            left: -15px;
             background-color: #fff;
             min-width: 200px;
             border-radius: 0 0 10px 10px;
@@ -123,10 +132,10 @@
         nav ul li ul li a {
             color: #333;
             padding: 12px 20px;
-            transition: background-color 0.3s ease, color 0.3s ease;
-            font-size: 13px;
             display: block;
             text-decoration: none;
+            font-size: 13px;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
 
         nav ul li ul li a:hover {
@@ -135,115 +144,73 @@
         }
 
         /* 折叠按钮样式 */
-        .toggle-button {
+       .toggle-button {
             display: none;
             background: none;
             border: none;
-            color: #d6d6d6;
+            color: #333;
             font-size: 20px;
             cursor: pointer;
             transition: color 0.3s ease;
         }
 
-        .toggle-button:hover {
-            color: #fff;
+       .toggle-button:hover {
+            color: #000;
         }
 
-        /* 嵌入网页容器样式 */
-        .iframe-container {
-            flex: 1;
-            width: 100%;
-            overflow: hidden;
-            position: relative;
-        }
-
-        .iframe-container iframe {
-            position: absolute;
-            top: -100px; /* 隐藏顶部 100px 的内容 */
-            bottom: -200px; /* 隐藏底部 100px 的内容 */
-            width: 100%;
-            height: calc(100% + 200px); /* 增加高度以补偿隐藏的部分 */
-            border: none;
-        }
-
-        /* 媒体查询，当屏幕宽度小于600px时 */
-        @media (max-width: 600px) {
+        /* 响应式导航菜单 */
+        @media (max-width: 768px) {
             header {
-                padding: 0 10px;
+                padding: 0 20px;
             }
 
             nav ul {
                 display: none;
-                flex-direction: column;
                 position: absolute;
-                top: 44px;
+                top: 66px;
                 left: 0;
-                background-color: rgba(0, 0, 0, 0.8);
                 width: 100%;
+                background-color: #f5f5f7;
+                flex-direction: column;
             }
 
             nav ul.show {
                 display: flex;
             }
 
-            nav ul li {
-                margin: 10px 20px;
+            nav > ul > li {
+                margin: 0;
             }
 
-            .toggle-button {
-                display: block;
+            nav > ul > li > a {
+                padding: 15px 20px;
             }
 
             nav ul li ul {
                 position: static;
-                background-color: transparent;
+                width: 100%;
                 box-shadow: none;
-                transform: none;
+                border-radius: 0;
                 opacity: 1;
                 visibility: visible;
+                transform: translateY(0);
                 display: none;
             }
 
-            nav ul li:hover ul {
+            nav ul li.active ul {
                 display: block;
             }
 
-            nav ul li ul li a {
-                color: #fff;
+           .toggle-button {
+                display: block;
             }
         }
 
-        /* 媒体查询，当屏幕宽度在601px - 768px之间时（平板） */
-        @media (min-width: 601px) and (max-width: 768px) {
-            header {
-                padding: 0 20px;
-            }
-
-            nav > ul > li {
-                margin: 0 10px;
-            }
-
-            nav > ul > li > a {
-                font-size: 10px;
-            }
-        }
-
-        /* 媒体查询，当屏幕宽度在769px - 992px之间时（小桌面） */
-        @media (min-width: 769px) and (max-width: 992px) {
-            header {
-                padding: 0 50px;
-            }
-
-            nav > ul > li {
-                margin: 0 15px;
-            }
-        }
-
-        /* 媒体查询，当屏幕宽度在993px - 1200px之间时（大桌面） */
-        @media (min-width: 993px) and (max-width: 1200px) {
-            header {
-                padding: 0 100px;
-            }
+        /* 嵌入页面样式 */
+       .embedded-page {
+            width: 100%;
+            height: calc(100vh - 66px); /* 减去导航栏的高度 */
+            border: none;
         }
     </style>
 </head>
@@ -254,40 +221,36 @@
         <div class="logo">
             <!-- 将 logo 图片用 a 标签包裹，点击返回首页 -->
             <a href="index.html">
-                <img src="logo.png" alt="网站 logo">
+                <img src="logo.png" alt="网站 logo" class="hover-scale">
             </a>
         </div>
-        <button class="toggle-button" onclick="toggleNav()" aria-label="切换导航菜单">☰</button>
+        <button class="toggle-button" aria-label="切换导航菜单">☰</button>
         <nav>
             <ul id="nav-ul">
-                <li><a href="index.html">首页</a></li>
-                <li><a href="fonts.html">字库产品</a>
+                <li><a href="index.html" class="hover-color">首页</a></li>
+                <li><a href="fonts.html" class="hover-color">字库产品</a>
                     <ul>
                         <li><a href="">Z系列（基础字库）</a></li>
                         <li><a href="">Δ系列（可变字体）</a></li>
                         <li><a href="">Ω系列（典藏字体）</a></li>
                     </ul>
                 </li>
-                <li><a href="bao.html">百宝库</a>
-                </li>
-                <li><a href="hao.html">字造导航</a>
-                </li>
-                <li><a href="more.html">更多服务</a>
-                </li>
+                <li><a href="bao.html" class="hover-color">百宝库</a></li>
+                <li><a href="hao.html" class="hover-color">字造导航</a></li>
+                <li><a href="more.html" class="hover-color">更多服务</a></li>
             </ul>
         </nav>
     </header>
-
-    <!-- 嵌入网页容器 -->
-    <div class="iframe-container">
-        <iframe src="https://zizaotop.feishu.cn/share/base/query/shrcn0Ka5zIo6q8TCHmstW2OS6c"></iframe>
-    </div>
+    <!-- 嵌入页面 -->
+    <iframe class="embedded-page" src="https://zizaotop.feishu.cn/share/base/query/shrcn0Ka5zIo6q8TCHmstW2OS6c"></iframe>
 
     <script>
-        function toggleNav() {
-            const navUl = document.getElementById('nav-ul');
+        const toggleButton = document.querySelector('.toggle-button');
+        const navUl = document.getElementById('nav-ul');
+
+        toggleButton.addEventListener('click', function () {
             navUl.classList.toggle('show');
-        }
+        });
     </script>
 </body>
 
