--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-
 <html lang="zh-CN">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>字造 - 始终如一的创造</title>
     <!-- SEO 优化 -->
     <meta name="description" content="字造产品展示，提供优质的字库产品和设计资源。了解更多关于字造的信息。">
@@ -95,7 +93,7 @@
         }
 
         /* Dynamic Grid Background */
-      .grid-bg {
+        .grid-bg {
             position: fixed;
             top: 0;
             left: 0;
@@ -113,13 +111,14 @@
             0% {
                 background-position: 0 0;
             }
+
             100% {
                 background-position: 100px 100px;
             }
         }
 
         /* Neon Cursor Trail (Simplified with CSS) */
-      .cursor-trail {
+        .cursor-trail {
             position: fixed;
             width: 10px;
             height: 10px;
@@ -132,7 +131,7 @@
         }
 
         /* Main Content */
-      .hero {
+        .hero {
             height: 100vh;
             display: flex;
             flex-direction: column;
@@ -143,7 +142,7 @@
             text-align: center;
         }
 
-      .hero h1 {
+        .hero h1 {
             font-size: 4rem;
             line-height: 1.1;
             position: relative;
@@ -158,7 +157,7 @@
         }
 
         /* Font Cards */
-      .showcase {
+        .showcase {
             padding: 3rem 5%;
             display: grid;
             gap: 2rem;
@@ -167,7 +166,7 @@
             transition: grid-template-columns 0.3s ease;
         }
 
-      .font-card {
+        .font-card {
             background: rgba(0, 0, 0, 0.8);
             padding: 1.5rem;
             border: 1px solid var(--neon-blue);
@@ -177,14 +176,14 @@
             overflow: hidden;
         }
 
-      .font-card:hover,
-      .font-card:focus {
+        .font-card:hover,
+        .font-card:focus {
             transform: rotateX(10deg) rotateY(10deg) translateZ(20px);
             box-shadow: 0 0 30px var(--neon-blue), 0 0 60px var(--neon-pink);
             outline: none;
         }
 
-      .font-card::before {
+        .font-card::before {
             content: '';
             position: absolute;
             top: -50%;
@@ -195,18 +194,18 @@
             animation: rotate 4s linear infinite;
         }
 
-      .font-card h3 {
+        .font-card h3 {
             color: var(--neon-blue);
             font-size: 1.2rem;
             margin-bottom: 0.5rem;
         }
 
-      .font-card p {
+        .font-card p {
             color: var(--neon-pink);
             font-size: 0.9rem;
         }
 
-      .font-card.preview {
+        .font-card.preview {
             margin: 1rem 0;
         }
 
@@ -266,33 +265,6 @@
             }
         }
 
-        /* Media Queries */
-        @media (max-width: 992px) {
-          .showcase {
-                grid-template-columns: repeat(2, minmax(280px, 1fr));
-            }
-
-          .hero h1 {
-                font-size: 3rem;
-            }
-        }
-
-        @media (max-width: 768px) {
-          .showcase {
-                grid-template-columns: 1fr;
-            }
-
-          .hero h1 {
-                font-size: 2.5rem;
-            }
-        }
-
-        @media (max-width: 576px) {
-          .hero h1 {
-                font-size: 2.0rem;
-            }
-        }
-
         /* 顶部导航栏样式 */
         header {
             -webkit-backdrop-filter: blur(20px);
@@ -308,17 +280,17 @@
             width: 100%;
             box-sizing: border-box;
             margin-bottom: 30px;
-            background: transparent!important;
+            background: transparent !important;
             z-index: 2;
         }
 
-      .logo {
+        .logo {
             margin-right: 20px;
             position: relative;
             z-index: 2;
         }
 
-      .logo a img {
+        .logo a img {
             display: block;
             max-width: 100%;
             height: auto;
@@ -369,7 +341,7 @@
             transform-origin: bottom left;
         }
 
-      .toggle-button {
+        .toggle-button {
             display: none;
             background: none;
             border: none;
@@ -381,8 +353,8 @@
             z-index: 2;
         }
 
-      .toggle-button:hover {
-            color: #000;
+        .toggle-button:hover {
+            color: var(--neon-blue);
         }
 
         nav ul li ul {
@@ -433,16 +405,23 @@
 
             nav ul {
                 display: none;
-                position: absolute;
+                position: fixed;
                 top: 66px;
                 left: 0;
                 width: 100%;
-                background-color: #f5f5f7;
+                /* 使用半透明黑色背景 */
+                background-color: rgba(0, 0, 0, 0.9);
                 flex-direction: column;
+                z-index: 1000;
+                height: calc(100vh - 66px);
+                overflow-y: auto;
+                padding: 0;
+                margin: 0;
+                box-sizing: border-box;
             }
 
             nav ul.show {
-                display: flex!important;
+                display: flex !important;
             }
 
             nav>ul>li {
@@ -451,6 +430,11 @@
 
             nav>ul>li>a {
                 padding: 15px 20px;
+                display: block;
+                width: 100%;
+                box-sizing: border-box;
+                color: var(--text-color); /* 确保文字颜色为白色 */
+                border-bottom: 1px solid rgba(255, 255, 255, 0.1); /* 添加分隔线 */
             }
 
             nav ul li ul {
@@ -462,18 +446,26 @@
                 visibility: visible;
                 transform: translateY(0);
                 display: none;
+                background-color: rgba(0, 0, 0, 0.7); /* 子菜单背景半透明黑色 */
+            }
+
+            nav ul li ul li a {
+                color: var(--text-color); /* 子菜单文字颜色 */
+                padding-left: 30px; /* 增加缩进 */
             }
 
             nav ul li.active ul {
                 display: block;
             }
 
-          .toggle-button {
+            .toggle-button {
                 display: block;
                 position: absolute;
                 top: 50%;
                 right: 20px;
                 transform: translateY(-50%);
+                /* 确保按钮始终可见 */
+                z-index: 1001;
             }
         }
 
@@ -487,7 +479,7 @@
             z-index: 2;
         }
 
-      .footer-container {
+        .footer-container {
             width: 70%;
             margin: 0 auto;
             display: flex;
@@ -495,53 +487,54 @@
             padding-bottom: 20px;
         }
 
-      .footer-section {
+        .footer-section {
             width: 30%;
             padding-left: 20px;
             text-align: left;
         }
 
-      .footer-section h3 {
+        .footer-section h3 {
             font-size: 1.2em;
             margin-bottom: 10px;
         }
 
-      .footer-section p {
+        .footer-section p {
             font-size: 0.9em;
             line-height: 1.4;
         }
 
-      .footer-section ul {
+        .footer-section ul {
             list-style: none;
             padding: 0;
         }
 
-      .footer-section ul li {
+        .footer-section ul li {
             margin-bottom: 5px;
         }
 
-      .footer-section ul li a {
+        .footer-section ul li a {
             color: #fff;
             text-decoration: none;
         }
 
         /* 响应式底部导航栏 */
         @media (max-width: 768px) {
-          .footer-container {
+            .footer-container {
                 width: 90%;
-                flex-direction: column;
+                flex-direction: column; /* 修改为垂直排列 */
                 align-items: center;
             }
 
-          .footer-section {
-                width: 80%;
+            .footer-section {
+                width: 100%; /* 占据整行 */
                 text-align: center;
                 padding-left: 0;
+                margin-bottom: 20px; /* 增加段落之间的间距 */
             }
         }
 
         /* Glowing Arrow Styles */
-      .glowing-arrow {
+        .glowing-arrow {
             font-size: 3em;
             color: #00f3ff;
             cursor: pointer;
@@ -549,10 +542,74 @@
             text-shadow: 0 0 5px #00f3ff;
         }
 
-      .glowing-arrow:hover {
+        .glowing-arrow:hover {
             color: #ff00ff;
             text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff00ff, 0 0 30px #ff00ff;
             transform: translateY(-5px);
+        }
+
+        /* Font Cards */
+        .showcase {
+            padding: 3rem 5%;
+            display: grid;
+            gap: 2rem;
+            grid-template-columns: repeat(3, minmax(280px, 1fr));
+            justify-content: center;
+            transition: grid-template-columns 0.3s ease;
+        }
+
+        .font-card {
+            background: rgba(0, 0, 0, 0.8);
+            padding: 1.5rem;
+            border: 1px solid var(--neon-blue);
+            transform-style: preserve-3d;
+            transition: transform 0.5s, box-shadow 0.5s;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .font-card:hover,
+        .font-card:focus {
+            transform: rotateX(10deg) rotateY(10deg) translateZ(20px);
+            box-shadow: 0 0 30px var(--neon-blue), 0 0 60px var(--neon-pink);
+            outline: none;
+        }
+
+        .font-card::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: conic-gradient(transparent, var(--neon-blue), transparent 30%);
+            animation: rotate 4s linear infinite;
+        }
+
+        .font-card h3 {
+            color: var(--neon-blue);
+            font-size: 1.2rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .font-card p {
+            color: var(--neon-pink);
+            font-size: 0.9rem;
+        }
+
+        .font-card.preview {
+            margin: 1rem 0;
+        }
+
+        /* 响应式调整 */
+        @media (max-width: 768px) {
+            .showcase {
+                grid-template-columns: repeat(auto-fill, minmax(calc(50% - 10px), 1fr)); /* 修改为单列布局 */
+            }
+
+            .font-card {
+                width: auto; /* 移除宽度限制，让其自适应内容 */
+            }
         }
     </style>
 </head>
@@ -653,74 +710,80 @@
     </footer>
 
     <script>
-        // Cursor Trail Effect (Simplified)
-        document.addEventListener('mousemove', (e) => {
-            const trail = document.createElement('div');
-            trail.className = 'cursor-trail';
-            trail.style.left = e.clientX - 5 + 'px';
-            trail.style.top = e.clientY - 5 + 'px';
-            document.body.appendChild(trail);
-            setTimeout(() => trail.remove(), 300);
+       // Cursor Trail Effect (Simplified)
+document.addEventListener('mousemove', (e) => {
+    const trail = document.createElement('div');
+    trail.className = 'cursor-trail';
+    trail.style.left = e.clientX - 5 + 'px';
+    trail.style.top = e.clientY - 5 + 'px';
+    document.body.appendChild(trail);
+    setTimeout(() => trail.remove(), 300);
+});
+
+// 3D Parallax Effect
+document.addEventListener('mousemove', (e) => {
+    const hero = document.querySelector('.hero h1');
+    const x = (window.innerWidth / 2 - e.pageX) / 30;
+    const y = (window.innerHeight / 2 - e.pageY) / 30;
+    hero.style.transform = `rotateY(${x}deg) rotateX(${y}deg)`;
+});
+
+// Dynamic Grid Animation
+const grid = document.querySelector('.grid-bg');
+let offset = 0;
+
+function animateGrid() {
+    offset += 0.2;
+    grid.style.backgroundPosition = `${offset}px ${offset}px`;
+    requestAnimationFrame(animateGrid);
+}
+animateGrid();
+
+// Mobile Menu Setup
+function setupMobileMenu() {
+    const toggleButton = document.querySelector('.toggle-button');
+    const navUl = document.getElementById('nav-ul');
+
+    if (!toggleButton || !navUl) {
+        console.error('Toggle button or navUl not found');
+        return;
+    }
+
+    toggleButton.addEventListener('click', () => {
+        console.log('Toggle button clicked!'); // 添加这行
+        navUl.classList.toggle('show');
+        console.log('Nav UL classList:', navUl.classList); // 添加这行
+        // 保持按钮焦点，防止消失
+        toggleButton.focus();
+    });
+}
+
+// Initialization
+document.addEventListener('DOMContentLoaded', () => {
+    setupMobileMenu(); // Call mobile menu function
+
+    // Submenu Handling
+    const hasSubmenuItems = document.querySelectorAll('li.has-submenu > a');
+    hasSubmenuItems.forEach(item => {
+        item.addEventListener('click', (e) => {
+            e.preventDefault(); // Prevent default link behavior
+            const parentLi = item.parentNode;
+            parentLi.classList.toggle('active');
+            e.stopPropagation(); // Prevent event bubbling
         });
+    });
 
-        // 3D Parallax Effect
-        document.addEventListener('mousemove', (e) => {
-            const hero = document.querySelector('.hero h1');
-            const x = (window.innerWidth / 2 - e.pageX) / 30;
-            const y = (window.innerHeight / 2 - e.pageY) / 30;
-            hero.style.transform = `rotateY(${x}deg) rotateX(${y}deg)`;
+    // Close submenus on body click
+    document.body.addEventListener('click', () => {
+        const activeSubmenus = document.querySelectorAll('li.has-submenu.active');
+        activeSubmenus.forEach(submenu => {
+            submenu.classList.remove('active');
         });
+    });
+});
 
-        // Dynamic Grid Animation
-        const grid = document.querySelector('.grid-bg');
-        let offset = 0;
-
-        function animateGrid() {
-            offset += 0.2;
-            grid.style.backgroundPosition = `${offset}px ${offset}px`;
-            requestAnimationFrame(animateGrid);
-        }
-        animateGrid();
-
-        // Mobile Menu Setup
-        function setupMobileMenu() {
-            const toggleButton = document.querySelector('.toggle-button');
-            const navUl = document.getElementById('nav-ul');
-
-            if (!toggleButton || !navUl) {
-                console.error('Toggle button or navUl not found');
-                return;
-            }
-
-            toggleButton.addEventListener('click', () => {
-                navUl.classList.toggle('show');
-            });
-
-            // Submenu Handling
-            const hasSubmenuItems = document.querySelectorAll('li.has-submenu > a');
-            hasSubmenuItems.forEach(item => {
-                item.addEventListener('click', (e) => {
-                    e.preventDefault(); // Prevent default link behavior
-                    const parentLi = item.parentNode;
-                    parentLi.classList.toggle('active');
-                    e.stopPropagation(); // Prevent event bubbling
-                });
-            });
-
-            // Close submenus on body click
-            document.body.addEventListener('click', () => {
-                const activeSubmenus = document.querySelectorAll('li.has-submenu.active');
-                activeSubmenus.forEach(submenu => {
-                    submenu.classList.remove('active');
-                });
-            });
-        }
-
-        // Initialization
-        document.addEventListener('DOMContentLoaded', () => {
-            setupMobileMenu(); // Call mobile menu function
-        });
     </script>
+
 </body>
 
 </html>
